VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc26Down.err
[8MB/455.1MB][  1%][>                                                 ][4MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][16MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][26MB/s]  [152MB/455.1MB][ 33%][================>                                 ][30.4MB/s]  [184MB/455.1MB][ 40%][====================>                             ][30.67MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][30.86MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][31MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][31.11MB/s]  [304MB/455.1MB][ 66%][=================================>                ][30.4MB/s]  [328MB/455.1MB][ 72%][====================================>             ][29.82MB/s]  [352MB/455.1MB][ 77%][======================================>           ][29.33MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][28.92MB/s]  [408MB/455.1MB][ 89%][============================================>     ][29.14MB/s]  [440MB/455.1MB][ 96%][================================================> ][29.33MB/s]  [455.1MB/455.1MB][100%][==================================================][30.34MB/s]  [455.1MB/455.1MB][100%][==================================================][30.34MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_47195/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_47195/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
